[tool.poetry]
name = "pyspark-unit-test"
version = "0.1.0"
description = ""
authors = ["Walid BOULACHEB <w.boulacheb@gmail.com>"]
readme = "README.md"
packages = [{include = "pyspark_unit_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
job = "pyspark_unit_test.job:main"
